# routes/index.js
@@ -1,9 +1,19 @@
+const passport = require('passport');
 
 const router = require('express').Router();
 
 router.use('/', require('./swagger'));
-
 router.use('/employees', require('./employees'));
 router.use('/trainings', require('./trainings'));
+
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('/logout', (req, res, next) => {
+  req.logout((err) => {
+    if (err) return next(err);
+    res.redirect('/');
+  });
+});
+
 
 module.exports = router;
